--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,4 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
-
-.textBanner
-{
-    font-size: 1.3em;
-}
+@import './variable_overrides';
+@import "page/index.scss";
+@import "utils/variables";
