--- a/css/style.css
+++ b/css/style.css
@@ -9995,4 +9995,39 @@ h3 {
   font-size: 1.3em;
 }
 
+#ourSelection {
+  width: 55%;
+  padding-top: 13.3px;
+  padding-bottom: 13.3px;
+  background-image: linear-gradient(#e9ecef, #adb5bd);
+  border-radius: 60px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 200px;
+  position: relative;
+  z-index: 1;
+}
+#ourSelection:hover::after {
+  opacity: 0.2;
+}
+#ourSelection::after {
+  content: "";
+  position: absolute;
+  border-radius: 60px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  box-shadow: 2px 2px 20px #ced4da;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 250ms;
+}
+
+#ourSelection > a {
+  text-decoration: none;
+}
+
 /*# sourceMappingURL=style.css.map */
