--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
-  --dark: #343a40;
+  --dark: #3c3c3d;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -1838,21 +1838,21 @@ pre code {
 .table-dark,
 .table-dark > th,
 .table-dark > td {
-  background-color: #c6c8ca;
+  background-color: #c8c8c9;
 }
 .table-dark th,
 .table-dark td,
 .table-dark thead th,
 .table-dark tbody + tbody {
-  border-color: #95999c;
+  border-color: #9a9a9a;
 }
 
 .table-hover .table-dark:hover {
-  background-color: #b9bbbe;
+  background-color: #bbbbbc;
 }
 .table-hover .table-dark:hover > td,
 .table-hover .table-dark:hover > th {
-  background-color: #b9bbbe;
+  background-color: #bbbbbc;
 }
 
 .table-active,
@@ -2646,34 +2646,34 @@ fieldset:disabled a.btn {
 
 .btn-dark {
   color: #fff;
-  background: #343a40 linear-gradient(180deg, #52585d, #343a40) repeat-x;
-  border-color: #343a40;
+  background: #3c3c3d linear-gradient(180deg, #59595a, #3c3c3d) repeat-x;
+  border-color: #3c3c3d;
 }
 .btn-dark:hover {
   color: #fff;
-  background: #23272b linear-gradient(180deg, #44474b, #23272b) repeat-x;
-  border-color: #1d2124;
+  background: #29292a linear-gradient(180deg, #49494a, #29292a) repeat-x;
+  border-color: #232323;
 }
 .btn-dark:focus, .btn-dark.focus {
   color: #fff;
-  background: #23272b linear-gradient(180deg, #44474b, #23272b) repeat-x;
-  border-color: #1d2124;
-  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+  background: #29292a linear-gradient(180deg, #49494a, #29292a) repeat-x;
+  border-color: #232323;
+  box-shadow: 0 0 0 0.2rem rgba(89, 89, 90, 0.5);
 }
 .btn-dark.disabled, .btn-dark:disabled {
   color: #fff;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: #3c3c3d;
+  border-color: #3c3c3d;
   background-image: none;
 }
 .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active, .show > .btn-dark.dropdown-toggle {
   color: #fff;
-  background-color: #1d2124;
+  background-color: #232323;
   background-image: none;
-  border-color: #171a1d;
+  border-color: #1c1c1d;
 }
 .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-dark.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(89, 89, 90, 0.5);
 }
 
 .btn-outline-primary {
@@ -2852,28 +2852,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-dark {
-  color: #343a40;
-  border-color: #343a40;
+  color: #3c3c3d;
+  border-color: #3c3c3d;
 }
 .btn-outline-dark:hover {
   color: #fff;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: #3c3c3d;
+  border-color: #3c3c3d;
 }
 .btn-outline-dark:focus, .btn-outline-dark.focus {
-  box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(60, 60, 61, 0.5);
 }
 .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-  color: #343a40;
+  color: #3c3c3d;
   background-color: transparent;
 }
 .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active, .show > .btn-outline-dark.dropdown-toggle {
   color: #fff;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: #3c3c3d;
+  border-color: #3c3c3d;
 }
 .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-dark.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(60, 60, 61, 0.5);
 }
 
 .btn-link {
@@ -4780,15 +4780,15 @@ a.badge-light:focus, a.badge-light.focus {
 
 .badge-dark {
   color: #fff;
-  background-color: #343a40;
+  background-color: #3c3c3d;
 }
 a.badge-dark:hover, a.badge-dark:focus {
   color: #fff;
-  background-color: #1d2124;
+  background-color: #232323;
 }
 a.badge-dark:focus, a.badge-dark.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(60, 60, 61, 0.5);
 }
 
 .jumbotron {
@@ -4922,15 +4922,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-dark {
-  color: #1b1e21;
-  background: #d6d8d9 linear-gradient(180deg, #dcdedf, #d6d8d9) repeat-x;
-  border-color: #c6c8ca;
+  color: #1f1f20;
+  background: #d8d8d8 linear-gradient(180deg, #dedede, #d8d8d8) repeat-x;
+  border-color: #c8c8c9;
 }
 .alert-dark hr {
-  border-top-color: #b9bbbe;
+  border-top-color: #bbbbbc;
 }
 .alert-dark .alert-link {
-  color: #040505;
+  color: #060606;
 }
 
 @keyframes progress-bar-stripes {
@@ -5277,17 +5277,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-dark {
-  color: #1b1e21;
-  background-color: #c6c8ca;
+  color: #1f1f20;
+  background-color: #c8c8c9;
 }
 .list-group-item-dark.list-group-item-action:hover, .list-group-item-dark.list-group-item-action:focus {
-  color: #1b1e21;
-  background-color: #b9bbbe;
+  color: #1f1f20;
+  background-color: #bbbbbc;
 }
 .list-group-item-dark.list-group-item-action.active {
   color: #fff;
-  background-color: #1b1e21;
-  border-color: #1b1e21;
+  background-color: #1f1f20;
+  border-color: #1f1f20;
 }
 
 .close {
@@ -6124,13 +6124,13 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #3c3c3d !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
 button.bg-dark:focus {
-  background-color: #1d2124 !important;
+  background-color: #232323 !important;
 }
 
 .bg-gradient-primary {
@@ -6162,7 +6162,7 @@ button.bg-dark:focus {
 }
 
 .bg-gradient-dark {
-  background: #343a40 linear-gradient(180deg, #52585d, #343a40) repeat-x !important;
+  background: #3c3c3d linear-gradient(180deg, #59595a, #3c3c3d) repeat-x !important;
 }
 
 .bg-white {
@@ -6242,7 +6242,7 @@ button.bg-dark:focus {
 }
 
 .border-dark {
-  border-color: #343a40 !important;
+  border-color: #3c3c3d !important;
 }
 
 .border-white {
@@ -9833,11 +9833,11 @@ a.text-light:hover, a.text-light:focus {
 }
 
 .text-dark {
-  color: #343a40 !important;
+  color: #3c3c3d !important;
 }
 
 a.text-dark:hover, a.text-dark:focus {
-  color: #121416 !important;
+  color: #161616 !important;
 }
 
 .text-body {
@@ -9979,14 +9979,9 @@ h3 {
     border-color: #dee2e6;
   }
 }
-.Color__logo {
-  background-image: linear-gradient(#17a2b8, #6f42c1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: 600;
-}
 .Color__title {
-  background-image: linear-gradient(#17a2b8, #6f42c1);
+  margin-left: -8px;
+  background-image: linear-gradient(#007bff, #6f42c1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
