--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
+@import "./variable_overrides";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
-@import './variable_overrides';
 @import "page/index.scss";
 @import "utils/variables";
 @import "components/selection";
