--- a/sass/_variable_overrides.scss
+++ b/sass/_variable_overrides.scss
@@ -1,1 +1,7 @@
+//Heading font // 
+$headings-font-family: "Raleway", Times, serif;
+
+//Text font // 
+$font-family-base: "Roboto", Times, serif;
+
 $dark: #3c3c3d;
