--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Roboto", Times, serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -353,6 +353,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
+  font-family: "Raleway", Times, serif;
   font-weight: 500;
   line-height: 1.2;
 }
@@ -5556,7 +5557,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Roboto", Times, serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5658,7 +5659,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Roboto", Times, serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -9979,11 +9980,18 @@ h3 {
     border-color: #dee2e6;
   }
 }
-.Color__title {
+.Colortitle {
   margin-left: -8px;
   background-image: linear-gradient(#007bff, #6f42c1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.Colorcart {
+  background-image: linear-gradient(#007bff, #6f42c1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1.3em;
 }
 
 .textBanner {
