--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import "./variable_overrides";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "page/index.scss";
+@import "page/panier.scss";
 @import "utils/variables";
 @import "components/selection";
