--- a/sass/components/_selection.scss
+++ b/sass/components/_selection.scss
@@ -1,9 +1,9 @@
-#ourSelection{
+.ourSelection{
     @include btn;
     @include animationbtn;
 }
 
-#ourSelection > a 
+.ourSelection > a 
 {
     text-decoration: none;
 }
