--- a/css/style.css
+++ b/css/style.css
@@ -10002,7 +10002,7 @@ h3 {
   display: none !important;
 }
 
-#ourSelection {
+.ourSelection {
   width: 55%;
   padding-top: 13.3px;
   padding-bottom: 13.3px;
@@ -10015,10 +10015,10 @@ h3 {
   position: relative;
   z-index: 1;
 }
-#ourSelection:hover::after {
+.ourSelection:hover::after {
   opacity: 0.2;
 }
-#ourSelection::after {
+.ourSelection::after {
   content: "";
   position: absolute;
   border-radius: 60px;
@@ -10033,7 +10033,7 @@ h3 {
   transition: opacity 250ms;
 }
 
-#ourSelection > a {
+.ourSelection > a {
   text-decoration: none;
 }
 
